fixing spacing issue. changed landing view to calendar

--- a/client/src/components/Slot/Slot.css
+++ b/client/src/components/Slot/Slot.css
@@ -8,6 +8,10 @@
   background: white;
 }
 
+.Slot__container > * {
+  margin: 0 auto;
+}
+
 .Slot__container.wkDay-1 {
   grid-column: 1;
 }
